# astropack-2

./: README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: astropack2_wflow.yml
MINAS___Machine_learning_for_INference_with_Astronomical_Surveys.egg-info/: PKG-INFO  SOURCES.txt
astropack2/: __init__.py
astropack2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
astropack2/astropack.egg-info/: PKG-INFO  SOURCES.txt
astropack2/astropack2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
astropack2/evaluation/: _graphics.py  feature_selection.py
astropack2/models/: _predictors.py
evaluation/: _graphics.py
minas.egg-info/: PKG-INFO  SOURCES.txt
models/: _models.py  _predictors.py
src/astropack/: __init__.py
src/astropack/evaluation/: _graphics.py
src/astropack/models/: _predictors.py
tuning/: _tuner.py
